--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "Social newtwork ",
   "main": "server.js",
   "scripts": {
+    "client-install": "npm install --prefix client",
     "start": "node server.js",
-    "server": "nodemon server.js"
+    "server": "nodemon server.js",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "",
   "license": "ISC",
@@ -19,5 +22,8 @@
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "validator": "^10.3.0"
+  },
+  "devDependencies": {
+    "concurrently": "^3.5.1"
   }
 }
